# cube

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: mesh.hpp  shader.hpp  window.hpp
include/math/: math.hpp  matrix.hpp  vector.hpp
include/utils/: assertion.hpp  noncopyable.hpp
shaders/: main.fs.glsl  main.vs.glsl
src/: main.cpp  mesh.cpp  shader.cpp  window.cpp
src/math/: matrix.cpp
